syntax = "proto3";
package go.micro.srv.ideas;
option go_package="ideas";
import "google/protobuf/timestamp.proto";
import "github.com/jianhan/ms-sui-ideas/proto/idea/idea.proto";

enum AppType {
    WEB = 0;
    MOBILE = 1;
    DESKTOP = 2;
    OTHER=3;
}

enum Pirority {
    UNSET=0;
    NICE_TO_HAVE = 1;
    SHOULD_HAVE = 2;
    MUST_HAVE = 3;
}

message Idea {
    // @inject_tag: bson:"_id" valid:"uuidv4~ID must be a valid UUIDv4" conform:"trim"
    string ID = 1;
    // @inject_tag: bson:"name" valid:"required~Name is required" conform:"trim"
    string name = 2;
    // @inject_tag: bson:"slug" valid:"required~Slug is required" conform:"trim"
    string slug = 3;
    // @inject_tag: bson:"description" valid:"Description is required" conform:"trim"
    string description = 4;
    // @inject_tag: bson:"hidden"
    bool hidden = 5;
    // @inject_tag: bson:"app_type" valid:"App type is required"
    repeated AppType type = 6;
    // @inject_tag: bson:"min_age"
    uint64 min_age = 7;
    // @inject_tag: bson:"max_age"
    uint64 max_age = 8;
    // @inject_tag: bson:"rating"
    float rating = 9;
    // @inject_tag: bson:"features"
    repeated Feature features = 10;
    // @inject_tag: bson:"occupations"
    repeated Occupation occupations = 11;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at  = 12;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 13;
}

message Feature {
    Story story = 1;
    uint64 display_order = 2;
}
